--- a/views/sellers/new.ejs
+++ b/views/sellers/new.ejs
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1> This is the new page</h1>
+<h1> This is the new page</h1>
 </body>
 
-</html>
+<form action='/' method="POST">
+    <div class="form-group">
+        <label for="name">Username</label>
+        <input type="text" class="form-control" id="name" name="name" />
+    </div>
+
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
