--- a/views/sellers/index.ejs
+++ b/views/sellers/index.ejs
@@ -12,7 +12,7 @@
 
 
     <ul>
-        <% seller.forEach(seller => {%>
+        <% sellers.forEach(seller => {%>
         <li>
             <a href="/sellers/<%= seller.id%>"> <%=seller.name%> </a>
         </li>
