--- a/views/sellers/new.ejs
+++ b/views/sellers/new.ejs
@@ -1,12 +1,12 @@
-<h1> This is the new page</h1>
+<h1> New Seller</h1>
 </body>
 
-<form action='/' method="POST">
+<form action='/sellers/' method="POST">
     <div class="form-group">
         <label for="name">Username</label>
         <input type="text" class="form-control" id="name" name="name" />
-    </div>
 
+    </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
