Album INdex page works

--- a/views/albums/new.ejs
+++ b/views/albums/new.ejs
@@ -9,7 +9,7 @@
 
 <body>
 
-    <form action="/albums/<%= sellerId %> " method="POST">
+    <form action="/albums<%= sellerId %> " method="POST">
         <div class="form-group">
             <label for="artist">Artist</label>
             <input type="text" class="form-control" id="artist" name="artist" />
