--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,74 @@
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Righteous");
+
 body {
-    background-color: aqua;
+    margin: 0;
+    font-family: "Comfortaa", cursive;
+}
+
+body::after {
+    content: "";
+    background: url(https://i.imgur.com/WIzi8G7.jpg);
+    opacity: 0.4;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* body {
+  background: url(https://images.clipartlogo.com/files/istock/previews/8741/87414357-apple-seamless-pastel-colors-pattern-fruits-texture-background.jpg);
+  margin: 0;
+  font-family: "Comfortaa", cursive;
+} */
+
+h1 {
+    font-family: "Righteous", cursive;
+    background: antiquewhite;
+    margin: 0;
+    margin-bottom: 0.5em;
+    padding: 1em;
+    text-align: center;
+}
+
+a {
+    color: orange;
+    text-decoration: none;
+    text-shadow: 1px 1px 1px black;
+    font-size: 1.5em;
+    background: rgba(193, 235, 187, 0.9);
+    /* padding: .25em;
+  margin: .5em; */
+}
+
+a:hover {
+    color: ghostwhite;
+}
+
+li {
+    list-style: none;
+}
+
+li a {
+    color: mediumseagreen;
+}
+
+form {
+    margin-left: 10px;
+}
+
+input[type="text"] {
+    padding: 0.3em;
+    margin: 5px;
+}
+
+input[type="submit"] {
+    padding: 0.3em;
+    color: rgb(255, 119, 0);
+    background: rgb(127, 247, 181);
+    font-size: 1em;
+    border-radius: 10%;
 }
