--- a/views/albums/index.ejs
+++ b/views/albums/index.ejs
@@ -16,6 +16,12 @@
         <li>
             <a href="/albums/<%= album.id%>"> <%=album.name%> </a>
         </li>
+
+
+        <form action="/albums/<%=albums._id %>?_method=DELETE" method="POST">
+            <button>Delete</button>
+        </form>
+
         <% }) %>
     </ul>
 
