--- a/views/albums/new.ejs
+++ b/views/albums/new.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include ('../partials/header.ejs') %>
 
 <body>
+
 
     <form action="/albums<%= sellerId %> " method="POST">
         <div class="form-group">
@@ -20,3 +14,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+
+    <%- include ('../partials/footer.ejs') %>
