--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,22 @@
-<header>
-    <nav>
-        <a href="/">Sellers</a>
-        <ul>
-            <li> <a href="/sellers"> Sellers</a></li>
-            <li> <a href="/sellers/new"> Add Sellers</a></li>
-            <li> <a href="/albums"> Albums</a></li>
-            <li> <a href="/albums/new"> Add Albums</a></li>
-        </ul>
-    </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vintage Records</title>
+</head>
+
+<body>
+
+    <header>
+        <nav>
+            <h2>Quick Links</h2>
+            <ul>
+                <li> <a href="/sellers">Sellers List</a></li>
+                <li> <a href="/sellers/new"> Add New Seller</a></li>
+                <li> <a href="/albums"> Albums List</a></li>
+                <li> <a href="/albums/new"> Add New Album</a></li>
+            </ul>
+        </nav>
+    </header>
