--- a/views/sellers/index.ejs
+++ b/views/sellers/index.ejs
@@ -1,34 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1> Index of Sellers </h1>
+<%- include ('../partials/header.ejs') %>
+<h1> Index of Sellers </h1>
 
 
-    <ul>
-        <% sellers.forEach(seller => {%>
-        <li>
-            <a href="/sellers/<%= seller.id%>"> <%=seller.name%> </a>
-        </li>
+<ul>
+    <% sellers.forEach(seller => {%>
+    <li>
+        <a href="/sellers/<%= seller.id%>"> <%=seller.name%> </a>
+    </li>
+    <!-- <a href="/sellers/<%=sellers.id%>/edit">edit</a> -->
+    <form action="/sellers/<%=seller._id %>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
 
-        <form action="/sellers/<%=sellers._id %>?_method=DELETE" method="POST">
-            <button>Delete</button>
-        </form>
-
-        <% }) %>
-
-
-    </ul>
+    <% }) %>
 
 
-
-
-</body>
-
-</html>
+</ul>
+<%- include ('../partials/footer.ejs') %>
