--- a/views/sellers/show.ejs
+++ b/views/sellers/show.ejs
@@ -1,4 +1,6 @@
-<h1><%= seller.name %> Detail Page</h1>
+<%- include ('../partials/header.ejs') %>
+
+<h1><%= seller.name %> Seller's Detail Page</h1>
 
 <a href="/albums/new?sellerId=<%= seller.id %> "> Add New Album</a>
 
