--- a/views/sellers/new.ejs
+++ b/views/sellers/new.ejs
@@ -1,3 +1,4 @@
+<%- include ('../partials/header.ejs') %>
 <h1> New Seller</h1>
 </body>
 
@@ -10,3 +11,5 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<%- include ('../partials/footer.ejs') %>
