--- a/views/albums/show.ejs
+++ b/views/albums/show.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/app.css">
 <%- include ('../partials/header.ejs') %>
 <h1><%= album.artist %> Album's Detail Page</h1>
 
