--- a/views/sellers/show.ejs
+++ b/views/sellers/show.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/app.css">
 <%- include ('../partials/header.ejs') %>
 
 <h1><%= seller.name %> Seller's Detail Page</h1>
