--- a/views/albums/new.ejs
+++ b/views/albums/new.ejs
@@ -4,7 +4,8 @@
 <body>
 
 
-    <form action="/albums<%= sellerId %> " method="POST">
+
+    <form action='/albums/' method="POST">
         <div class="form-group">
             <label for="artist">Artist</label>
             <input type="text" class="form-control" id="artist" name="artist" />
